5개의 노드를 가진 은닉층 추가, 예측값 좀 더 잘나오도록 수정
은닉층 추가.

--- a/tensorflow_Deeplearning_boston.ipynb
+++ b/tensorflow_Deeplearning_boston.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "eb00db8c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "066416e8",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "4  396.90   5.33  36.2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,58 +213,93 @@
    "source": [
     "# 모델 만들어주기\n",
     "X = tf.keras.layers.Input(shape=[13])\n",
-    "Y = tf.keras.layers.Dense(1)(X)\n",
+    "H = tf.keras.layers.Dense(5, activation='swish')(X)\n",
+    "Y = tf.keras.layers.Dense(1)(H)\n",
     "model = tf.keras.models.Model(X, Y)\n",
     "model.compile(loss='mse')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "c2cc1353",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "16/16 [==============================] - 0s 2ms/step - loss: 24.1913\n",
+      "16/16 [==============================] - 0s 1ms/step - loss: 69.6361\n",
       "Epoch 2/10\n",
-      "16/16 [==============================] - 0s 2ms/step - loss: 24.3608\n",
+      "16/16 [==============================] - 0s 1ms/step - loss: 69.5631\n",
       "Epoch 3/10\n",
-      "16/16 [==============================] - 0s 2ms/step - loss: 23.6944\n",
+      "16/16 [==============================] - 0s 1ms/step - loss: 73.2423\n",
       "Epoch 4/10\n",
-      "16/16 [==============================] - 0s 2ms/step - loss: 24.5592\n",
+      "16/16 [==============================] - 0s 1ms/step - loss: 69.6923\n",
       "Epoch 5/10\n",
-      "16/16 [==============================] - 0s 3ms/step - loss: 23.9284\n",
+      "16/16 [==============================] - 0s 1ms/step - loss: 66.1145\n",
       "Epoch 6/10\n",
-      "16/16 [==============================] - 0s 2ms/step - loss: 24.6155\n",
+      "16/16 [==============================] - 0s 2ms/step - loss: 68.8625\n",
       "Epoch 7/10\n",
-      "16/16 [==============================] - 0s 2ms/step - loss: 24.0089\n",
+      "16/16 [==============================] - 0s 1ms/step - loss: 72.8158\n",
       "Epoch 8/10\n",
-      "16/16 [==============================] - 0s 2ms/step - loss: 24.1956\n",
+      "16/16 [==============================] - 0s 1ms/step - loss: 66.4888\n",
       "Epoch 9/10\n",
-      "16/16 [==============================] - 0s 2ms/step - loss: 23.9349\n",
+      "16/16 [==============================] - 0s 1ms/step - loss: 67.5432\n",
       "Epoch 10/10\n",
-      "16/16 [==============================] - 0s 2ms/step - loss: 24.0888\n"
+      "16/16 [==============================] - 0s 1ms/step - loss: 70.6102\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f802d3753a0>"
+       "<keras.callbacks.History at 0x7f944509abe0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 만들어 놓은 모델을 데이터로 학습시키기!\n",
-    "model.fit(independent, dependent, epochs=10000, verbose=0)\n",
+    "model.fit(independent, dependent, epochs=1000, verbose=0)\n",
     "model.fit(independent, dependent, epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b1a32f77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_3 (InputLayer)        [(None, 13)]              0         \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 5)                 70        \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 1)                 6         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 76\n",
+      "Trainable params: 76\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
    ]
   },
   {
