Deep learning Test

--- a/Face_Recognition/find_face_in_picture.ipynb
+++ b/Face_Recognition/find_face_in_picture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "08841908-1b72-42d2-b14e-6f0f87590793",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "I found 1 face(s) in this photograph.\n",
-      "A face is located at pixel location Top: 241, Left: 419, Bottom: 562, Right: 740\n"
+      "A face is located at pixel location Top: 372, Left: 720, Bottom: 568, Right: 917\n"
      ]
     }
    ],
@@ -20,12 +20,14 @@
     "import face_recognition\n",
     "\n",
     "# Load the jpg file into a numpy array\n",
-    "image = face_recognition.load_image_file(\"test_images/biden.jpg\")\n",
+    "image = face_recognition.load_image_file(\"test_images/Jun.png\")\n",
     "\n",
-    "# Find all the faces in the image using the default HOG-based model.\n",
-    "# This method is fairly accurate, but not as accurate as the CNN model and not GPU accelerated.\n",
-    "# See also: find_faces_in_picture_cnn.py\n",
-    "face_locations = face_recognition.face_locations(image)\n",
+    "# Find all the faces in the image using a pre-trained convolutional neural network.\n",
+    "# This method is more accurate than the default HOG model, but it's slower\n",
+    "# unless you have an nvidia GPU and dlib compiled with CUDA extensions. But if you do,\n",
+    "# this will use GPU acceleration and perform well.\n",
+    "# See also: find_faces_in_picture.py\n",
+    "face_locations = face_recognition.face_locations(image, number_of_times_to_upsample=0, model=\"cnn\")\n",
     "\n",
     "print(\"I found {} face(s) in this photograph.\".format(len(face_locations)))\n",
     "\n",
@@ -40,6 +42,38 @@
     "    pil_image = Image.fromarray(face_image)\n",
     "    pil_image.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45ec39d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8ad1aaf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5072d0cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7384e7bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -66,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
