--- a/Face_Recognition/find_facial_feature_in_picture.ipynb
+++ b/Face_Recognition/find_facial_feature_in_picture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
     }
    ],
    "source": [
-    "image = face_recognition.load_image_file('test_images/Jun1.jpg')\n",
+    "image = face_recognition.load_image_file('test_images/Jun.png')\n",
     "\n",
     "face_landmarks_list = face_recognition.face_landmarks(image)\n",
     "\n",
@@ -33,22 +33,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The chin in this face has the following points: [(550, 310), (548, 329), (548, 349), (549, 370), (554, 391), (566, 406), (585, 416), (608, 421), (634, 423), (661, 422), (687, 419), (710, 411), (725, 397), (733, 378), (737, 358), (740, 338), (742, 318)]\n",
-      "The left_eyebrow in this face has the following points: [(568, 272), (578, 257), (594, 249), (612, 248), (629, 253)]\n",
-      "The right_eyebrow in this face has the following points: [(655, 253), (674, 248), (693, 251), (710, 261), (720, 277)]\n",
-      "The nose_bridge in this face has the following points: [(642, 277), (640, 285), (639, 293), (637, 302)]\n",
-      "The nose_tip in this face has the following points: [(620, 328), (628, 329), (637, 329), (646, 330), (656, 330)]\n",
-      "The left_eye in this face has the following points: [(582, 290), (592, 283), (603, 283), (615, 289), (604, 290), (592, 291)]\n",
-      "The right_eye in this face has the following points: [(668, 290), (681, 285), (692, 286), (702, 293), (691, 293), (680, 292)]\n",
-      "The top_lip in this face has the following points: [(602, 367), (616, 352), (629, 344), (636, 346), (644, 345), (657, 353), (671, 368), (665, 366), (644, 358), (636, 358), (628, 358), (608, 365)]\n",
-      "The bottom_lip in this face has the following points: [(671, 368), (656, 370), (644, 370), (635, 370), (627, 370), (615, 370), (602, 367), (608, 365), (628, 359), (635, 359), (644, 359), (665, 366)]\n"
+      "The chin in this face has the following points: [(715, 470), (714, 498), (716, 525), (722, 552), (733, 577), (750, 597), (775, 611), (801, 622), (828, 626), (856, 623), (880, 613), (903, 598), (919, 579), (929, 555), (935, 531), (938, 506), (936, 481)]\n",
+      "The left_eyebrow in this face has the following points: [(741, 429), (758, 417), (778, 414), (798, 417), (815, 427)]\n",
+      "The right_eyebrow in this face has the following points: [(848, 431), (865, 424), (883, 420), (901, 423), (914, 434)]\n",
+      "The nose_bridge in this face has the following points: [(832, 456), (832, 472), (832, 489), (831, 506)]\n",
+      "The nose_tip in this face has the following points: [(811, 527), (821, 529), (830, 530), (840, 529), (850, 528)]\n",
+      "The left_eye in this face has the following points: [(760, 456), (772, 449), (786, 451), (798, 461), (785, 462), (771, 461)]\n",
+      "The right_eye in this face has the following points: [(861, 463), (873, 453), (887, 453), (898, 461), (888, 465), (874, 465)]\n",
+      "The top_lip in this face has the following points: [(794, 564), (810, 557), (822, 551), (830, 554), (839, 552), (851, 559), (865, 567), (860, 567), (839, 564), (830, 564), (822, 563), (799, 564)]\n",
+      "The bottom_lip in this face has the following points: [(865, 567), (851, 574), (839, 577), (830, 578), (821, 576), (809, 572), (794, 564), (799, 564), (822, 564), (830, 565), (839, 564), (860, 567)]\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
